Fix botched MFC (rev 1.6.2.2): __sys_close -> _thread_sys_close

PR:		kern/41251